compiler-core/src/parse/snapshots/gleam_core__parse__tests__private_internal_const.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@internal\nconst wibble = 1\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
const wibble = 1


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ Redundant internal attribute

Only a public definition can be annotated as internal.
Hint: remove the `@internal` annotation.
